Updates from Overleaf

--- a/00-main.tex
+++ b/00-main.tex
@@ -250,11 +250,11 @@
 \begin{document}
 \title{\Huge{\textbf{The Beginner's Textbook}}\\ \Huge{\textbf{for Fully Homomorphic Encryption}}}
 \author{
-        \textbf{Ronny Ko} \thanks{\large \textit{\text{Acknowledgments}:}  
-        \textbf{Robin Geelen} (KU Leuven);  
-        \textbf{Tianjian Yang} (Peking University); \textbf{Yongwoo Lee} (Inha University).}
+        \textbf{Ronny Ko} \thanks{\large \textit{\text{Acknowledgments}:}\\  
+        \textbf{Robin Geelen} (KU Leuven)\\  
+        \textbf{Tianjian Yang} (Peking University)\\ \textbf{Yongwoo Lee} (Inha University)}
         \\{LG Electronics Inc.}}%\\\texttt{\small{hajoon.ko@lge.com}}}
-\date{January 1, 2025}
+\date{}
 
 
 
