--- a/a02-group.tex
+++ b/a02-group.tex
@@ -11,7 +11,7 @@
 \item \textbf{Set ($\mathbb{S}$):} A bundle of elements: $\mathbb{S} = \{a, b, c, \gap{$\cdots$}, n\}$
 \item \textbf{Set Operations $\bm{(+, \cdot)}$:} A set defines two operations between any two elements $a, b \in \mathbb{S}$ as operands: addition $(+)$ and multiplication $(\cdot)$
 \item \textbf{Additive Identity ($1_{(+)}$):} An element $i \in \mathbb{S}$ is an additive identity if for all $a \in \mathbb{S}$, $i + a = a$.
-\item \textbf{Multiplicative Identity ($1_{(\cdot)}$):} An element $i \in \mathbb{S}$ is an additive identity if for all $a \in \mathbb{S}$, $i \cdot a = a$
+\item \textbf{Multiplicative Identity ($1_{(\cdot)}$):} An element $i \in \mathbb{S}$ is a multiplicative identity if for all $a \in \mathbb{S}$, $i \cdot a = a$
 \item \textbf{Additive Inverse ($a^{-1}$):} For each $a \in \mathbb{S}$, its additive inverse $a^{-1}$ is defined as an element such that $a + a^{-1} = 1_{(+)}$ (i.e., additive identity)
 \item \textbf{Multiplicative Inverse ($a^{-1}$):} For each $a \in \mathbb{S}$ except for $a = 0$, its multiplicative inverse $a^{-1}$ is defined as an element such that $a \cdot a^{-1} = 1_{(\cdot)}$ (i.e., multiplicative identity)
 \end{itemize}
