--- a/a05-polynomial-ring.tex
+++ b/a05-polynomial-ring.tex
@@ -17,7 +17,7 @@ A polynomial ring ${\mathbb{Z}_q[x] / (x^n + 1)}$ is the set of all polynomials 
 For a polynomial $f \in \mathbb{Z}_q[x] / (x^n + 1)$ where $f = c_0 + c_1x^1 + \gap{$\cdots$} + c_{n-1}x^{n-1}$:
 
 \begin{itemize}
-\item \textbf{Coefficient Ring:} $f_i$'s each polynomial coefficient $c_j$ is in integer modulo $p$.
+\item \textbf{Coefficient Ring:} $f_i$'s each polynomial coefficient $c_j$ is in integer modulo $q$.
 
 (i.e., $c_i + q \equiv c_i \gap{\text{mod}} q$). 
 
