several typo fixes

--- a/a01-modulo.tex
+++ b/a01-modulo.tex
@@ -99,7 +99,7 @@ $\Longleftrightarrow a \cdot x = b \cdot x \pmod q$
 \end{enumerate}
 \end{proof}
 
-Based on the modulo operations in Theorem\ref*{subsec:modulo-arithmetic}.1, we can also derive the following properties of modulo arithmetic:
+Based on the modulo operations in Theorem~\ref*{subsec:modulo-arithmetic}.1, we can also derive the following properties of modulo arithmetic:
 
 
 \begin{tcolorbox}[title={\textbf{\tboxtheorem{\ref*{subsec:modulo-arithmetic}.2} Properties of Modulo Arithmetic}}]
@@ -139,7 +139,7 @@ In modulo $q$ (i.e., in the world of remainders where all numbers have been divi
 
 \item \textbf{Additive Inverse} of $a$ is denoted as $a_+^{-1}$ \revise{which satisfies} $a + a_+^{-1} \equiv 0 \bmod q$. For example, in modulo 11, $3_+^{-1} = 8$, because $3 + 8 \equiv 0 \bmod 11$.
 
-\item \textbf{Multiplicative Inverse} of $a$ is denoted as $a_*^{-1}$ \revise{which satisfies} $a + a_*^{-1} \equiv 1 \bmod q$. For example, in modulo 11, $3_*^{-1} = 4$, because $3 \cdot 4 \equiv 1 \bmod 11$.
+\item \textbf{Multiplicative Inverse} of $a$ is denoted as $a_*^{-1}$ \revise{which satisfies} $a \cdot a_*^{-1} \equiv 1 \bmod q$. For example, in modulo 11, $3_*^{-1} = 4$, because $3 \cdot 4 \equiv 1 \bmod 11$.
 
 \end{itemize}
 
