--- a/a03-field.tex
+++ b/a03-field.tex
@@ -7,9 +7,9 @@
 \begin{tcolorbox}[title={\textbf{\tboxdef{\ref*{subsec:field-def}} Field Definitions}}]
 \begin{itemize}
 \item \textbf{Ring:} A set of elements which is an abelian group under the + operator, and closed, associative, and distributive on the ($+, \cdot$) operators. 
-\item \textbf{Field:} A set of elements which is an abelian group under both the $(+, \cdot)$ operators (i.e., the set has an identity element and multiplicative inverses for all elements), and distributive on those operators.
+\item \textbf{Field:} A set of elements which is an abelian group under both the $(+, \cdot)$ operators (i.e., the set has an identity element and multiplicative inverses for all non-zero elements), and distributive on those operators.
 \item \textbf{Galois Field ($\text{GF}(p^n)$):} A field with a finite number of elements (whose number must be $p^n$ for some prime $p$ and a positive integer $n$).
-\item \textbf{$\mathbb{Z}_p$ ($\mathbb{Z}/p\mathbb{Z}$):} The finite field of integer modulo $p$, which is $\{0, 1, 2, \cdots... \text{ } p - 1\}$ where $p$ is a prime number. If $p$ is a prime number, $\mathbb{Z}_p$ is always a finite field. This is also called a quotient ring of $p$.
+\item \textbf{$\mathbb{Z}_p$ ($\mathbb{Z}/p\mathbb{Z}$):} The finite field of integers modulo $p$, which is $\{0, 1, 2, \cdots... \text{ } p - 1\}$ where $p$ is a prime number. If $p$ is a prime number, $\mathbb{Z}_p$ is always a finite field. This is also called a quotient ring of $p$.
 \end{itemize}
 \end{tcolorbox}
 $ $
