--- a/a06-decomp.tex
+++ b/a06-decomp.tex
@@ -52,7 +52,7 @@ This time, suppose we have polynomial $f$ in the polynomial ring ${\mathbb{Z}_q[
 
 \begin{tcolorbox}[title={\textbf{\tboxlabel{\ref*{subsec:poly-decomp}} Polynomial Decomposition}}]
 
-Given $f \in \mathbb{Z}_q[z]/(x^n+1)$, where:
+Given $f \in \mathbb{Z}_q[x]/(x^n+1)$, where:
 
 $ $
 
